screen追加したよ

--- a/os/GNUmakefile
+++ b/os/GNUmakefile
@@ -36,7 +36,7 @@
 #   標準では Bluetooth だけにデバッグメッセージが出力される．
 # デバッグモードをOFFにするときは
 #   kernel/dispatcher.s 中のprintFを呼び出す部分をコメントアウトすること
-#DEBUG=DEBUG=1
+DEBUG=DEBUG=1
 
 #　ディレクトリを移動する際のログを出力しない
 MAKEFLAGS=--no-print-directory
